# nekojni

./: .gitignore  Cargo.toml  build.rs  compile_java.ps1  compile_java.sh  test_cli.ps1  test_cli.sh
examples/: test_classes.rs  test_classes_2.rs
nekojni_classfile/: Cargo.toml
nekojni_classfile/examples/: class_writer_test.rs
nekojni_classfile/src/: attributes.rs  code.rs  constant_pool.rs  flags.rs  lib.rs
nekojni_cli/: Cargo.toml
nekojni_cli/src/: build_jar.rs  main.rs  native_loader.rs
nekojni_codegen/: Cargo.toml
nekojni_codegen/examples/: class_writer_test.rs
nekojni_codegen/src/: class_data.rs  exported_class.rs  generate_precompiled.rs  hash_util.rs  lib.rs  native_class_wrapper.rs  native_init.rs  native_shutdown.rs  utils.rs
nekojni_codegen/src/classfile/: code.rs  mod.rs
nekojni_codegen/src/moe/lymia/nekojni/: LoadBinaryExternally.java  LoadBinaryFromResource.java  ModuleException.java  ModuleInitWrapper.java  NativeLibraryResourceLoader.java
nekojni_macros/: Cargo.toml
nekojni_macros/src/: errors.rs  helper_macros.rs  java_class.rs  jni_exports.rs  lib.rs  signatures.rs  utils.rs
nekojni_macros/src/java_class/: method_handler.rs  mod.rs  utils.rs
nekojni_signatures/: Cargo.toml
nekojni_signatures/examples/: test_example.rs
nekojni_signatures/src/: java_signature.pest  java_sigs.rs  jni_exports.rs  jni_interop.rs  jni_signature.pest  jni_sigs.rs  lib.rs  scala_signature.pest  scala_sigs.rs  static_list.rs
nekojni_signatures/tests/: test_parse_fail.rs  test_sigs.rs  test_types.rs  type_display.rs
nekojni_utils/: Cargo.toml
nekojni_utils/src/: class_data.rs  constcat.rs  generate_precompiled.rs  lib.rs  native_class_wrapper.rs
nekojni_utils/src/classfile/: attributes.rs  code.rs  constant_pool.rs  mod.rs  utils.rs
nekojni_utils/src/moe/lymia/nekojni/: ModuleException.java  ModuleInitWrapper.java  NativeLibraryNullLoader.java  NativeLibraryResourceLoader.java  ShutdownHook.java
nekojni_utils/src/signatures/: java_signature.pest  java_sigs.rs  jni_exports.rs  jni_sigs.rs  mod.rs
nekojni_utils/tests/: test_sigs.rs  test_types.rs
src/: conversions.rs  errors.rs  globals.rs  jni_env.rs  lib.rs  panicking.rs
src/__macro_internals/: constructor_return_ty.rs  extract_self_param.rs  mod.rs  object_id.rs  once.rs  panicking.rs  registration.rs  return_ty.rs
src/conversions/: basic.rs  java_type.rs  jni_ref.rs  mod.rs  objects.rs  strings.rs
src/internal/: init.rs  jni_entry.rs  mod.rs  panicking.rs
src/java_class/: exported_class.rs  exports.rs  jni_ref.rs  mod.rs  object_id.rs
src/jni_env/: mod.rs  objects.rs  param_traits.rs
src/moe/lymia/nekojni/: ShutdownHook_0000000000000000.java
