[package]
name = "nekojni"
version = "0.1.0"
authors = ["Lymia Aluysia <lymia@lymia.moe>"]
edition = "2021"

[features]
default = ["codegen"]
codegen = []

[[example]]
name = "test_classes_2"
crate-type = ["cdylib"]

[dependencies]
bytemuck = "1.8.0"
chashmap = "2.2.2"
constcat = "0.1.1"
enumset = "1.0.8"
jni = "0.19"
lazy_static = "1.4.0"
parking_lot = { version = "0.12.0", features = ["nightly", "arc_lock"] }
thiserror = "1.0.30"

nekojni_classfile = { version = "0.1.0", path = "nekojni_classfile" }
nekojni_codegen = { version = "0.1.0", path = "nekojni_codegen" }
nekojni_macros = { version = "0.1.0", path = "nekojni_macros" }
nekojni_signatures = { version = "0.1.0", path = "nekojni_signatures", features = ["jni"] }

[workspace]
members = ["nekojni_classfile", "nekojni_cli", "nekojni_codegen", "nekojni_macros", "nekojni_signatures"]
