[package]
name = "nekojni_cli"
version = "0.1.0"
authors = ["Lymia Aluysia <lymia@lymia.moe>"]
edition = "2021"

[dependencies]
clap = { version = "3.1.9", features = ["derive"] }
goblin = "0.5.1"
dlopen = "0.1.8"

nekojni = { version = "0.1.0", path = ".." }
nekojni_codegen = { version = "0.1.0", path = "../nekojni_codegen", features = ["cli"] }