[package]
name = "nekojni_codegen"
version = "0.1.0"
authors = ["Lymia Aluysia <lymia@lymia.moe>"]
edition = "2021"

description = "This is an internal crate used by nekojni, and is not public API."

[features]
macro = ["signature", "hash"]
cli = ["classfile", "signature", "hash"]
hash = ["blake3", "byteorder"]
classfile = ["signature", "byteorder", "zip"]
signature = ["pest", "pest_consume", "pest_derive"]

[dependencies]
blake3 = { version = "1.3.1", optional = true }
byteorder = { version = "1.4.3", optional = true }
cesu8 = "1.1.0"
enumset = "1.0.8"
pest = { version = "2.1.3", optional = true }
pest_consume = { version = "1.1.1", optional = true }
pest_derive = { version = "2.1.0", optional = true }
zip = { version = "0.6.2", optional = true, default-features = false }
