[package]
name = "nekojni_macros"
version = "0.1.0"
authors = ["Lymia Aluysia <lymia@lymia.moe>"]
edition = "2021"

description = "This is an internal crate used by nekojni, and is not public API."

[lib]
proc-macro = true

[dependencies]
darling = "0.13.1"
enumset = "1.0.10"
heck = "0.4.0"
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1"
proc-macro-crate = "1.1.3"

nekojni_codegen = { version = "0.1.0", path = "../nekojni_codegen" }
